# teabuy-backend

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  vercel.json
alembic/: env.py
alembic/versions/: 0001_baseline.py  32d8f6f9b8f0_hardening_and_contract_fields.py  7acb41dba265_purchase_flow.py  9f31a7c2c1de_notification_contract_fields.py  b1c4f8d7e2a1_add_checkin_records.py
app/: main.py
app/core/: cache.py  config.py  db.py  deps.py  errors.py  logging.py  middleware.py  request_context.py  response.py  security.py
app/models/: __init__.py  entities.py
app/modules/address/: router.py
app/modules/auth/: router.py
app/modules/cart/: router.py
app/modules/catalog/: router.py
app/modules/checkin/: router.py
app/modules/health/: router.py
app/modules/home/: router.py
app/modules/internal/: router.py
app/modules/internal_catalog/: __init__.py  router.py
app/modules/navigation/: router.py
app/modules/notification/: router.py
app/modules/order/: router.py
app/modules/payment/: router.py
app/modules/profile/: router.py
app/modules/refund/: router.py
app/modules/review/: router.py
app/scripts/: seed_dev.py
app/services/: china_area.py  order_status.py
docs/: frontend-api-integration.md  简版对接文档-覆盖从下单到确认收货的完整链路.md
scripts/: seed_large_catalog.py
tests/: test_admin_permissions.py  test_checkin.py  test_china_area.py  test_health.py  test_home_navigation_catalog.py  test_internal_catalog.py  test_internal_notifications.py  test_notifications_contract.py  test_order_flow.py
